<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <GVL Name="GVL" Id="{e607aa11-c301-416f-9cbc-bc4f43af5299}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//Module C1A2
	ioControl : ioBundleControl;
	ioSafety : ioBundleSafety;

	cylinderControls : ARRAY[1..11] OF RunCylinder;
	signalControls : ARRAY[1..13] OF RunSignal;
	axisControls: ARRAY[1..13] OF RunAxis;
	//
	materialSlots : ARRAY[1..4] OF RunMaterial;	
	stations : ARRAY[1..8] OF POINTER TO RunUnitGeneric;
		
	bObjectsLinked : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>